Bug 65159 - act-user-manager never forgets any sessions
Summary: act-user-manager never forgets any sessions
Status: RESOLVED FIXED
Alias: None
Product: accountsservice
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: low normal
Assignee: Matthias Clasen
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-30 07:11 UTC by Marius Vollmer
Modified: 2013-06-06 00:28 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Really remove obsolete sessions from the records. (837 bytes, patch)
2013-05-30 07:11 UTC, Marius Vollmer
Details | Splinter Review

Description Marius Vollmer 2013-05-30 07:11:27 UTC
Created attachment 80015 [details] [review]
Really remove obsolete sessions from the records.

Sessions are inserted into ActUserManagerPrivate::sessions, but never removed.

One consequence is that _act_user_remove_session is flooded with requests to remove long-gone historical sessions every time a session disappears.
Comment 1 Matthias Clasen 2013-06-06 00:28:58 UTC
Attachment 80015 [details] pushed as 230ca6f - Really remove obsolete sessions from the records.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.