Really remove obsolete sessions from the records.

https://bugs.freedesktop.org/show_bug.cgi?id=65159